# ml_courses_coding

./: README.md  pyproject.toml
.zed/: settings.json
courses_coding/: code_extractor.py
courses_coding/10_model_selection_boosting/: grid_search.ipynb  k_fold_cross_validation.ipynb
courses_coding/1_data_preprocessing/: main.py
courses_coding/2_regression/SVR/: main.py
courses_coding/2_regression/decision_tree/: main.ipynb
courses_coding/2_regression/decision_tree_regression/: main.ipynb
courses_coding/2_regression/multiple_linear/: main.py
courses_coding/2_regression/multiple_linear_regression/: main.py
courses_coding/2_regression/polynomial_regression/: main.py
courses_coding/2_regression/random_forest/: main.ipynb
courses_coding/2_regression/simple_linear/: main.py
courses_coding/2_regression/simple_linear_regression/: main.py
courses_coding/3_classification/: decision_tree.ipynb  k_nearest_neighbors.ipynb  kernel_svm.ipynb  logistic_regression.ipynb  naive_bayes.ipynb  random_forest.ipynb  support_vector_machine.ipynb
courses_coding/4_clustering/: hierarchical.ipynb  k_means_pp.ipynb
courses_coding/5_association_rule_learning/: apriori.ipynb  eclat.ipynb
courses_coding/6_reinforcement_learning/: upper_confidence_bound.ipynb
courses_coding/7_natural_language_processing/: natural_language_processing.ipynb
courses_coding/8_deep_learning/: artificial_neural_network.ipynb  convolutional_neural_network.ipynb
courses_coding/9_dimensionality_reduction/: kernel_pca.ipynb  linear_discriminant_analysis.ipynb  principal_component_analysis.ipynb
(+17 files in other folders)
