[tool.poetry]
name = "courses-coding"
version = "0.1.0"
description = ""
authors = ["Denis <taranenko.denis.serg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
apyori = "^1.1.2"
nltk = "^3.9.1"
tensorflow = "^2.17.0"
numpy = "^1.26.0"
keras = "^3.6.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
